--- a/templates/pages/forecast.html
+++ b/templates/pages/forecast.html
@@ -11,19 +11,12 @@
     <div ng-if="weatherResult">
         <div style="display: flex; flex-wrap: wrap">
             <div ng-repeat="w in weatherResult.list">
-                <div class="col-md-12">
-                    <div class="card border-primary mb-3" style="max-width: 17rem;">
-                        <div class="card-header">
-                            <h4 class="card-title">{{ w.dt*1000 | date:"MM/dd/yyyy 'at' h:mma" }}</h3>
-                        </div>
-                        <div class="card-body text-primary">
-                            <div class="card-text">
-                                Daytime temperature: {{ (w.main.temp - 273.15).toFixed() }}&#176;C
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <weather-report day="getDay(w.dt)"
+                                temp="getTemp(w.main.temp)"
+                                date-format="MM/dd/yyyy 'at' h:mma"></weather-report>
             </div>
         </div>
     </div>
 </div>
+
+<!-- day="w.dt*1000" temp="(w.main.temp - 273.15).toFixed()" -->
